# tlua

./: .gitignore  CMakeLists.txt  README.md
.claude/skills/run-tlua/: SKILL.md  smoke.sh
docs/: tlua-debug-setup.md  tlua-reference.md  tlua-syntax.ebnf  ue5-integration-plan.md
examples/: demo.lua  demo.tlua  test_inline_vs_doc.lua  test_integration.lua  test_integration.tlua  test_self_inference.lua  test_ue5_integration.lua
examples/stubs/: UE5_stubs.lua
openspec/changes/archive/2025-07-15-add-unit-tests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-07-15-add-unit-tests/specs/e2e-tests/: spec.md
openspec/changes/archive/2025-07-15-add-unit-tests/specs/lexer-tests/: spec.md
openspec/changes/archive/2025-07-15-add-unit-tests/specs/lua-build/: spec.md
openspec/changes/archive/2025-07-15-add-unit-tests/specs/transpiler-tests/: spec.md
openspec/changes/archive/2025-07-15-add-unit-tests/specs/unit-testing/: spec.md
openspec/changes/archive/2025-07-15-define-tlua-syntax/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-07-15-define-tlua-syntax/specs/lua-run-script/: spec.md
openspec/changes/archive/2025-07-15-define-tlua-syntax/specs/tlua-syntax/: spec.md
openspec/changes/archive/2025-07-15-define-tlua-syntax/specs/tlua-transpile/: spec.md
openspec/changes/archive/2026-03-09-build-lua-from-source/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-build-lua-from-source/specs/lua-build/: spec.md
openspec/changes/archive/2026-03-09-build-lua-from-source/specs/lua-run-script/: spec.md
openspec/changes/archive/2026-03-09-define-type-annotation-syntax/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-define-type-annotation-syntax/specs/type-annotation-syntax/: spec.md
openspec/changes/archive/2026-03-12-add-lsp-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-12-add-lsp-support/specs/lsp-diagnostics/: spec.md
openspec/changes/archive/2026-03-12-add-lsp-support/specs/lsp-server/: spec.md
openspec/changes/archive/2026-03-12-add-lsp-support/specs/lua-build/: spec.md
openspec/changes/archive/2026-03-12-add-lsp-support/specs/vscode-extension/: spec.md
openspec/specs/e2e-tests/: spec.md
openspec/specs/lexer-tests/: spec.md
openspec/specs/lsp-diagnostics/: spec.md
openspec/specs/lsp-server/: spec.md
openspec/specs/lua-build/: spec.md
openspec/specs/lua-run-script/: spec.md
openspec/specs/tlua-syntax/: spec.md
openspec/specs/tlua-transpile/: spec.md
openspec/specs/transpiler-tests/: spec.md
openspec/specs/unit-testing/: spec.md
tests/: test_e2e.c  test_lexer.c  test_runtime.c  test_transpiler.c  tlua_test.h
tests/fixtures/: advanced_types.expected.lua  advanced_types.expected.out  advanced_types.tlua  basic_types.expected.lua  basic_types.expected.out  basic_types.tlua  comments.expected.lua  complex_types.expected.lua  complex_types.expected.out  complex_types.tlua  functions.expected.lua  functions.expected.out  functions.tlua  plain_lua.expected.out  plain_lua.tlua
tlua/: tlua_lexer.c  tlua_lexer.h  tlua_main.c  tlua_parser.c  tlua_parser.h  tlua_run.c
